# CudaSift

./: CMakeLists.txt  mainSift.cpp  package.xml
data/: limg_pts.pgm
src/: cudaSiftD.cu  cudaSiftH.cu  cudaSift_ros.cpp
