<?xml version="1.0"?>
<package>
  <name>cudasift_ros</name>
  <version>0.0.0</version>
  <description>The ROS package for CUDA SIFT</description>

  <maintainer email="sai@todo.todo">sai</maintainer>

  <license>TODO</license>
  <author email="celle@csc.kth.se">Marten Björkman aka Celebrandil</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
</package>
